# Es_13_Chess_Game

./: .gitignore  CMakeLists.txt  Create_Piece.cpp  Create_Piece.h  Draw_Promotion_Dialog.cpp  Draw_Promotion_Dialog.h  Draw_board.cpp  Draw_board.h  Es13.cpp  Es13.h  Handle_Chessboard.cpp  Handle_Chessboard.h  Handle_Fen_String.cpp  Handle_Fen_String.h  Handle_Mouse_Input.cpp  Handle_Mouse_Input.h  Move.cpp  Move.h  Movement_Handler.h  Movement_Piece.cpp  Movement_Piece.h  MyApp.cpp  MyApp.h  da_fare.txt
Chess_Engine/CASTLING/: Castling.cpp  Castling.h
Chess_Engine/CHECK/: Check.cpp  Check.h
Chess_Engine/CHESSBOARD_TURN/: Handle_Chessboard.cpp  Handle_Chessboard.h
Chess_Engine/CREATE_PIECE/: Create_Piece.cpp  Create_Piece.h
Chess_Engine/ENPASSANT/: Handle_Enpassant.cpp  Handle_Enpassant.h
Chess_Engine/FEN/: Handle_Fen_String.cpp  Handle_Fen_String.h
Chess_Engine/FIND_KING/: Find_King.cpp  Find_King.h
Chess_Engine/MOVE/: Move.cpp  Move.h
Chess_Engine/MOVEMENT_PIECE/: Movement_Piece.cpp  Movement_Piece.h
Chess_Engine/PIN/: Handle_Pin.cpp  Handle_Pin.h
Chess_Engine/PROMOTION_PAWN/: Promotion_Pawn.cpp  Promotion_Pawn.h
Chess_Engine/UPDATE_MOVES/: Update_Moves.cpp  Update_Moves.h
Piece_factory/: Piece.cpp  Piece.h
Piece_factory/Bishop/: Bishop.cpp
Piece_factory/King/: King.cpp  King.h
Piece_factory/Knight/: Knight.cpp
Piece_factory/Pawn/: Pawn.cpp
Piece_factory/Queen/: Queen.cpp
Piece_factory/Rock/: Rock.cpp
Test/: CMakeLists.txt  Castling_Tests.cpp  Check_Test.cpp  Chessboard_Test.cpp  Move_Test.cpp  Perft.cpp  main_test.cpp
start/: MyProjectBase.cpp  MyProjectBase.h
